--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Assaignment2</string>
-    <string name="job_application_for_techlab"><u><i><b>Job Application for TechLab</b></i></u></string>
+    <string name="job_application_for_techlab"><u><i><b>Job Application for SoftLab</b></i></u></string>
 </resources>
